--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -1,8 +1,3 @@
-# Welcome to Nextra
+# Welcome to OFF Design System
 
 Hello, world!
-
-
-import { JGButton } from "off-design-system";
-
-<JGButton>JGJGILL</JGButton>
